# HW_WEB11

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 651612d9d629_init.py  986455547bfb_init.py  a3059a3aa4c7_init.py  a8713156180d_init.py  a91bb72f60bf_init.py  d55c1c39fc55_init.py  e0674cbcf991_init.py
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/templates/: index.html
